endpoints and some bugs fixed

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -211,6 +211,57 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/customerHouseOwnerLayout"
+                        style="@style/parent"
+                        android:layout_marginTop="10dp">
+
+                        <TextView
+                            android:id="@+id/customerHouseOwner"
+                            style="@style/modifiedEditText"
+                            android:text="Customer or HouseOwner ? "
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.118"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <RadioGroup
+                            android:id="@+id/radioCustomerHouseOwnerGroup"
+                            android:layout_width="wrap_content"
+                            android:layout_height="32dp"
+                            android:layout_marginTop="10dp"
+                            android:orientation="horizontal"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.834"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <RadioButton
+                                android:id="@+id/radioCustomerButton"
+                                android:layout_width="wrap_content"
+                                android:layout_height="33dp"
+                                android:onClick="customerHouseOwnerRadioButtonHandler"
+                                android:text="Customer"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <RadioButton
+                                android:id="@+id/radioHouseOwnerButton"
+                                android:layout_width="wrap_content"
+                                android:layout_height="33dp"
+                                android:layout_marginLeft="@dimen/loginViewsMargin"
+                                android:onClick="customerHouseOwnerRadioButtonHandler"
+                                android:text="HouseOwner"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintHorizontal_bias="0.655"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                        </RadioGroup>
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputGender"
                         style="@style/parent"
                         android:layout_width="wrap_content"
@@ -260,54 +311,7 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/customerHouseOwnerLayout"
-                        style="@style/parent"
-                        android:layout_marginTop="10dp">
 
-                        <TextView
-                            android:id="@+id/customerHouseOwner"
-                            style="@style/modifiedEditText"
-                            android:text="Customer or HouseOwner ? "
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.118"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <RadioGroup
-                            android:id="@+id/radioCustomerHouseOwnerGroup"
-                            android:layout_width="wrap_content"
-                            android:layout_height="32dp"
-                            android:layout_marginTop="10dp"
-                            android:orientation="horizontal"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.834"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-                            <RadioButton
-                                android:id="@+id/radioCustomerButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="33dp"
-                                android:text="Customer"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                android:onClick="customerHouseOwnerRadioButtonHandler"/>
-                            <RadioButton
-                                android:id="@+id/radioHouseOwnerButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="33dp"
-                                android:text="HouseOwner"
-                                android:layout_marginLeft="@dimen/loginViewsMargin"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.655"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                android:onClick="customerHouseOwnerRadioButtonHandler"/>
-
-                        </RadioGroup>
-
-                    </com.google.android.material.textfield.TextInputLayout>
 
 
                     <androidx.constraintlayout.utils.widget.MotionButton
