--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,6 +45,11 @@
         <item name="android:backgroundTint">@color/primaryTextColor</item>
     </style>
 
+    <style name="modifiedUpdateEditText" parent="parent">
+        <item name="android:textSize">@dimen/newsMoreTextSize</item>
+        <item name="android:backgroundTint">@color/whiteTextColor</item>
+    </style>
+
     <style name="loginButton" parent="viewParent">
        <item name="android:background">@drawable/button_background_blue</item>
         <item name="android:textColor">@color/whiteTextColor</item>
