--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -21,7 +21,7 @@
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="30dp"
                 android:foregroundGravity="center_horizontal"
                 app:cardCornerRadius="100dp">
 
@@ -32,7 +32,39 @@
                     android:src="@drawable/envervalencia" />
             </androidx.cardview.widget.CardView>
 
-            <EditText
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="30dp"
+                android:layout_gravity="center">
+
+                <EditText
+                    android:id="@+id/updateEditTextName"
+                    style="@style/modifiedUpdateEditText"
+                    android:hint="Name"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"/>
+
+                <EditText
+                    android:id="@+id/updateEditTextSurname"
+                    style="@style/modifiedUpdateEditText"
+                    android:hint="Surname"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:layout_gravity="center"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"/>
+
+            </LinearLayout>
+
+
+
+
+            <!--<EditText
                 android:id="@+id/updateEditTextName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,7 +86,7 @@
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:inputType="textPersonName"
-                android:maxLines="1"/>
+                android:maxLines="1"/>-->
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
@@ -210,7 +242,7 @@
                     android:hint="Username"
                     android:inputType="textPersonName"
                     android:maxLines="1">-->
-                <AutoCompleteTextView
+                <EditText
                     android:id="@+id/updateEditTextUsername"
                     style="@style/modifiedUpdateEditText"
                     android:hint="Username"
